--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   },
   "homepage": "https://github.com/SiebogJS/RestWS#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "socket.io": "^1.7.1",
-    "siebogjs-common": "file:./lib/Common"
+    "siebogjs-common": "file:./lib/Common",
+    "socket.io": "^1.7.1"
   }
 }
